grammar.js
    source_file: ($) =>
      choice(
        prec(2, $._script_file),
        alias($.query_block, $.query),
        $._query_then_command_file,
      ),
    _script_file: ($) =>
      seq(
        optional(choice($.script_query_prefix, $.script_preamble)),
        repeat($.script_annotation),
        $.management_command,
        repeat(
          choice(
            $.script_annotation,
            $.script_query_prefix,
            $.script_preamble,
            alias($.management_command_continuation, $.management_command),
          ),
        ),
      ),
    _query_then_command_file: ($) =>
      seq(
        alias($.query_block, $.query),
        $.management_command,
        repeat(alias($.management_command_continuation, $.management_command)),
      ),
    query: ($) => $.query_block,
    statement: ($) =>
      choice(
        $.alias_database_statement,
        $.declare_pattern_statement,
        $.declare_query_parameters_statement,
        $.let_statement,
        $.query_statement,
        $.restrict_access_statement,
        $.set_statement,
      ),

    query_statement: ($) => prec(-1, field("expression", $.expression)),

    expression: ($) => $.pipe_expression,
    pipe_expression: ($) =>
      seq(
        field("expression", $.before_pipe_expression),
        repeat($.piped_operator),
      ),
    before_pipe_expression: ($) =>
      choice(
        $.before_or_after_pipe_operator,
        $.print_operator,
        $.macro_expand_operator,
        $.range_expression,
        $.entity_group_expression,
        $.scoped_function_call_expression,
        $.unnamed_expression,
      ),
    print_operator: ($) =>
      seq(
        "print",
        $.named_expression,
        repeat(seq(",", $.named_expression)),
      ),
    named_expression: ($) =>
      seq(
        optional(seq($.named_expression_name_clause, "=")),
        $.unnamed_expression,
      ),
    unnamed_expression: ($) => $.logical_or_expression,
    logical_or_expression: ($) =>
      prec.left(
        1,
        seq($.logical_and_expression, repeat(seq("or", $.logical_and_expression))),
      ),
    logical_and_expression: ($) =>
      prec.left(
        2,
        seq($.equality_expression, repeat(seq("and", $.equality_expression))),
      ),
    equality_expression: ($) =>
      choice(
        $.star_equality_expression,
        seq(
          $.relational_expression,
          choice("==", "<>", "!="),
          $.relational_expression,
        ),
        seq(
          $.relational_expression,
          choice("in", "!in", "in~", "!in~", "has_any", "has_all"),
          "(",
          $.invocation_expression,
          repeat(seq(",", $.invocation_expression)),
          ")",
        ),
        seq(
          $.relational_expression,
          choice("between", "!between"),
          "(",
          $.invocation_expression,
          "..",
          $.invocation_expression,
          ")",
        ),
        $.relational_expression,
      ),
    relational_expression: ($) =>
      prec.left(
        3,
        seq(
          $.additive_expression,
          optional(seq(choice("<", ">", "<=", ">="), $.additive_expression)),
        ),
      ),
    additive_expression: ($) =>
      prec.left(
        4,
        seq(
          $.multiplicative_expression,
          repeat(seq(choice("+", "-"), $.multiplicative_expression)),
        ),
      ),
    multiplicative_expression: ($) =>
      prec.left(
        5,
        seq(
          $.string_operator_expression,
          repeat(seq(choice("*", "/", "%"), $.string_operator_expression)),
        ),
      ),
    string_operator_expression: ($) =>
      choice(
        $.string_binary_operator_expression,
        $.string_star_operator_expression,
      ),
    string_binary_operator_expression: ($) =>
      seq(
        $.invocation_expression,
        optional(
          seq(
            choice($.string_binary_operator, ":"),
            $.invocation_expression,
          ),
        ),
      ),
    invocation_expression: ($) =>
      seq(optional(choice("+", "-")), $.function_call_or_path_expression),
    function_call_or_path_expression: ($) =>
      choice(
        $.function_call_or_path_path_expression,
        $.function_call_or_path_root,
      ),
    function_call_or_path_root: ($) =>
      choice(
        $.dot_composite_function_call_expression,
        $.primary_expression,
        $.to_scalar_expression,
        $.to_table_expression,
      ),
    primary_expression: ($) =>
      choice(
        $.unsigned_literal_expression,
        $.name_reference_with_data_scope,
        $.data_table_expression,
        $.external_data_expression,
        $.contextual_data_table_expression,
        $.materialized_view_combine_expression,
        $.parenthesized_expression,
      ),
    unsigned_literal_expression: ($) =>
      choice(
        $.long_literal_expression,
        $.int_literal_expression,
        $.real_literal_expression,
        $.decimal_literal_expression,
        $.date_time_literal_expression,
        $.time_span_literal_expression,
        $.boolean_literal_expression,
        $.guid_literal_expression,
        $.raw_guid_literal_expression,
        $.type_literal_expression,
        $.string_literal_expression,
        $.dynamic_literal_expression,
      ),
    long_literal_expression: ($) =>
      choice(
        $.integer_literal,
        token(
          prec(4, seq(choice("long", "int64"), "(", /[^)]*/, ")")),
        ),
      ),
    real_literal_expression: ($) =>
      choice(
        $.real_number,
        token(
          prec(4, seq(choice("real", "double"), "(", /[^)]*/, ")")),
        ),
      ),
    decimal_literal_expression: ($) =>
      token(prec(4, seq("decimal", "(", /[^)]*/, ")"))),
    date_time_literal_expression: ($) =>
      token(prec(4, seq("datetime", "(", /[^)]*/, ")"))),
    time_span_literal_expression: ($) =>
      choice(
        $.time_span_literal,
        token(prec(4, seq(choice("time", "timespan"), "(", /[^)]*/, ")"))),
      ),
    boolean_literal_expression: ($) =>
      choice(
        "true",
        "false",
        "TRUE",
        "FALSE",
        "True",
        "False",
        token(prec(4, seq("bool", "(", /[^)]*/, ")"))),
      ),
    guid_literal_expression: ($) =>
      token(
        prec(4, seq(choice("guid", "uuid", "uniqueid"), "(", /[^)]*/, ")")),
      ),
    dynamic_literal_expression: ($) =>
      seq("dynamic", "(", field("value", $.json_value), ")"),
    json_value: ($) =>
      choice(
        $.json_array,
        $.json_boolean,
        $.json_date_time,
        $.json_guid,
        $.json_long,
        $.json_null,
        $.json_object,
        $.json_real,
        $.json_string,
        $.json_time_span,
        $.dynamic_literal_expression,
      ),
    json_object: ($) =>
      seq(
        "{",
        optional(seq($.json_pair, repeat(seq(",", $.json_pair)))),
        "}",
      ),
    json_pair: ($) => seq($.string_literal, ":", $.json_value),
    json_array: ($) =>
      seq(
        "[",
        optional(seq($.json_value, repeat(seq(",", $.json_value)))),
        "]",
      ),
    json_boolean: ($) => $.boolean_literal_expression,
    json_long: ($) => seq(optional("-"), $.long_literal_expression),
    json_null: ($) => "null",
    integer_literal: ($) =>
      token(prec(1, /(?:0[xX][0-9a-fA-F]+|[0-9]+)/)),
    time_span_literal: ($) =>
      token(
        prec(
          3,
          /[0-9]+(?:\.[0-9]+)?(?:m(?:in(?:ute)?s?|s?)|s(?:ec(?:ond)?s?)?|d(?:ays?)?|h(?:ours?|rs?)?|ms|milli(?:s(?:ec(?:ond)?s?)?)?|micro(?:s(?:ec(?:ond)?s?)?)?|nano(?:s(?:ec(?:ond)?s?)?)?|ticks?)/,
        ),
      ),
    string_literal: ($) =>
      choice(
        $.double_quoted_string,
        $.single_quoted_string,
        $.verbatim_double_quoted_string,
        $.verbatim_single_quoted_string,
        $.multiline_backtick_string,
        $.multiline_tilde_string,
      ),
    string_literal_expression: ($) =>
      prec.left(1, seq($.string_literal, repeat($.string_literal))),
    double_quoted_string: ($) =>
      token(/[hH]?"(?:\\[^\r\n]|[^"\\\r\n])*"/),
    verbatim_double_quoted_string: ($) =>
      token(/[hH]?@"(?:""|[^"\r\n])*"/),
    multiline_backtick_string: ($) =>
      token(
        seq(
          optional(choice("h", "H")),
          "```",
          repeat(choice(/[^`]/, seq("`", /[^`]/), seq("``", /[^`]/))),
          "```",
        ),
      ),
    multiline_tilde_string: ($) =>
      token(
        seq(
          optional(choice("h", "H")),
          "~~~",
          repeat(choice(/[^~]/, seq("~", /[^~]/), seq("~~", /[^~]/))),
          "~~~",
        ),
      ),
