test/corpus/literals.txt
==================
core literal constructors
==================
print
  long(1),
  real(1.5),
  decimal(2.0),
  datetime(2026-08-06),
  1h,
  guid(00000000-0000-0000-0000-000000000000),
  00000000-0000-0000-0000-000000000000,
  dynamic({"items":[1,true,null]}),
  @"verbatim",
  h"hidden",
  ```multi
line```,
  ~~~tilde~~~
---

(source_file
  (query
    (statement
      (query_statement
        (expression
          (pipe_expression
            (before_pipe_expression
              (print_operator
                (named_expression
                  (unnamed_expression
                    (logical_or_expression
                      (logical_and_expression
                        (equality_expression
                          (relational_expression
                            (additive_expression
                              (multiplicative_expression
                                (string_operator_expression
                                  (string_binary_operator_expression
                                    (invocation_expression
                                      (function_call_or_path_expression
                                        (function_call_or_path_root
                                          (primary_expression
                                            (unsigned_literal_expression
                                              (long_literal_expression))))))))))))))))
                (named_expression
                  (unnamed_expression
                    (logical_or_expression
                      (logical_and_expression
                        (equality_expression
                          (relational_expression
                            (additive_expression
                              (multiplicative_expression
                                (string_operator_expression
                                  (string_binary_operator_expression
                                    (invocation_expression
                                      (function_call_or_path_expression
                                        (function_call_or_path_root
                                          (primary_expression
                                            (unsigned_literal_expression
                                              (real_literal_expression))))))))))))))))
                (named_expression
                  (unnamed_expression
                    (logical_or_expression
                      (logical_and_expression
                        (equality_expression
                          (relational_expression
                            (additive_expression
                              (multiplicative_expression
                                (string_operator_expression
                                  (string_binary_operator_expression
                                    (invocation_expression
                                      (function_call_or_path_expression
                                        (function_call_or_path_root
                                          (primary_expression
                                            (unsigned_literal_expression
                                              (decimal_literal_expression))))))))))))))))
                (named_expression
                  (unnamed_expression
                    (logical_or_expression
                      (logical_and_expression
                        (equality_expression
                          (relational_expression
                            (additive_expression
                              (multiplicative_expression
                                (string_operator_expression
                                  (string_binary_operator_expression
                                    (invocation_expression
                                      (function_call_or_path_expression
                                        (function_call_or_path_root
                                          (primary_expression
                                            (unsigned_literal_expression
                                              (date_time_literal_expression))))))))))))))))
                (named_expression
                  (unnamed_expression
                    (logical_or_expression
                      (logical_and_expression
                        (equality_expression
                          (relational_expression
                            (additive_expression
                              (multiplicative_expression
                                (string_operator_expression
                                  (string_binary_operator_expression
                                    (invocation_expression
                                      (function_call_or_path_expression
                                        (function_call_or_path_root
                                          (primary_expression
                                            (unsigned_literal_expression
                                              (time_span_literal_expression
                                                (time_span_literal)))))))))))))))))
                (named_expression
                  (unnamed_expression
                    (logical_or_expression
                      (logical_and_expression
                        (equality_expression
                          (relational_expression
                            (additive_expression
                              (multiplicative_expression
                                (string_operator_expression
                                  (string_binary_operator_expression
                                    (invocation_expression
                                      (function_call_or_path_expression
                                        (function_call_or_path_root
                                          (primary_expression
                                            (unsigned_literal_expression
                                              (guid_literal_expression))))))))))))))))
                (named_expression
                  (unnamed_expression
                    (logical_or_expression
                      (logical_and_expression
                        (equality_expression
                          (relational_expression
                            (additive_expression
                              (multiplicative_expression
                                (string_operator_expression
                                  (string_binary_operator_expression
                                    (invocation_expression
                                      (function_call_or_path_expression
                                        (function_call_or_path_root
                                          (primary_expression
                                            (unsigned_literal_expression
                                              (long_literal_expression
                                                (integer_literal))))))))))
                              (multiplicative_expression
                                (string_operator_expression
                                  (string_binary_operator_expression
                                    (invocation_expression
                                      (function_call_or_path_expression
                                        (function_call_or_path_root
                                          (primary_expression
                                            (unsigned_literal_expression
                                              (long_literal_expression
                                                (integer_literal))))))))))
                              (multiplicative_expression
                                (string_operator_expression
                                  (string_binary_operator_expression
                                    (invocation_expression
                                      (function_call_or_path_expression
                                        (function_call_or_path_root
                                          (primary_expression
                                            (unsigned_literal_expression
                                              (long_literal_expression
                                                (integer_literal))))))))))
                              (multiplicative_expression
                                (string_operator_expression
                                  (string_binary_operator_expression
                                    (invocation_expression
                                      (function_call_or_path_expression
                                        (function_call_or_path_root
                                          (primary_expression
                                            (unsigned_literal_expression
                                              (long_literal_expression
                                                (integer_literal))))))))))
                              (multiplicative_expression
                                (string_operator_expression
                                  (string_binary_operator_expression
                                    (invocation_expression
                                      (function_call_or_path_expression
                                        (function_call_or_path_root
                                          (primary_expression
                                            (unsigned_literal_expression
                                              (long_literal_expression
                                                (integer_literal)))))))))))))))))
                (named_expression
                  (unnamed_expression
                    (logical_or_expression
                      (logical_and_expression
                        (equality_expression
                          (relational_expression
                            (additive_expression
                              (multiplicative_expression
                                (string_operator_expression
                                  (string_binary_operator_expression
                                    (invocation_expression
                                      (function_call_or_path_expression
                                        (function_call_or_path_root
                                          (primary_expression
                                            (unsigned_literal_expression
                                              (dynamic_literal_expression
                                                (json_value
                                                  (json_object
                                                    (json_pair
                                                      (string_literal
                                                        (double_quoted_string))
                                                      (json_value
                                                        (json_array
                                                          (json_value
                                                            (json_long
                                                              (long_literal_expression
                                                                (integer_literal))))
                                                          (json_value
                                                            (json_boolean
                                                              (boolean_literal_expression)))
                                                          (json_value
                                                            (json_null)))))))))))))))))))))))
                (named_expression
                  (unnamed_expression
                    (logical_or_expression
                      (logical_and_expression
                        (equality_expression
                          (relational_expression
                            (additive_expression
                              (multiplicative_expression
                                (string_operator_expression
                                  (string_binary_operator_expression
                                    (invocation_expression
                                      (function_call_or_path_expression
                                        (function_call_or_path_root
                                          (primary_expression
                                            (unsigned_literal_expression
                                              (string_literal_expression
                                                (string_literal
                                                  (verbatim_double_quoted_string))))))))))))))))))
                (named_expression
                  (unnamed_expression
                    (logical_or_expression
                      (logical_and_expression
                        (equality_expression
                          (relational_expression
                            (additive_expression
                              (multiplicative_expression
                                (string_operator_expression
                                  (string_binary_operator_expression
                                    (invocation_expression
                                      (function_call_or_path_expression
                                        (function_call_or_path_root
                                          (primary_expression
                                            (unsigned_literal_expression
                                              (string_literal_expression
                                                (string_literal
                                                  (double_quoted_string))))))))))))))))))
                (named_expression
                  (unnamed_expression
                    (logical_or_expression
                      (logical_and_expression
                        (equality_expression
                          (relational_expression
                            (additive_expression
                              (multiplicative_expression
                                (string_operator_expression
                                  (string_binary_operator_expression
                                    (invocation_expression
                                      (function_call_or_path_expression
                                        (function_call_or_path_root
                                          (primary_expression
                                            (unsigned_literal_expression
                                              (string_literal_expression
                                                (string_literal
                                                  (multiline_backtick_string))))))))))))))))))
                (named_expression
                  (unnamed_expression
                    (logical_or_expression
                      (logical_and_expression
                        (equality_expression
                          (relational_expression
                            (additive_expression
                              (multiplicative_expression
                                (string_operator_expression
                                  (string_binary_operator_expression
                                    (invocation_expression
                                      (function_call_or_path_expression
                                        (function_call_or_path_root
                                          (primary_expression
                                            (unsigned_literal_expression
                                              (string_literal_expression
                                                (string_literal
                                                  (multiline_tilde_string))))))))))))))))))))))))))
